nit: fix comments and revert code
Signed-off-by: Valentin Tronkov <99957253+vtronkov@users.noreply.github.com>